--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-07 18:44:21.670361: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-06-07 18:44:21.672341: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-06-07 18:44:21.709042: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-06-07 18:44:21.709632: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-06-07 18:44:22.352424: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -57,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2,) <U6\n"
+      "(125, 1250, 1250) uint64\n"
      ]
     }
    ],
@@ -74,10 +61,13 @@
     "# img = readh5(\"../../../datasets/cremi/sample_A_20160501.hdf\", \"volumes/labels\")\n",
     "# img = readh5(\"../../../datasets/cremi/sample_A_20160501.hdf\", \"volumes/labels/clefts\")\n",
     "# img = readh5(\"../../../datasets/cremi/sample_A_20160501.hdf\", \"volumes/labels/neuron_ids\")\n",
-    "img = readh5(\"../../../datasets/cremi/sample_A_20160501.hdf\", \"volumes\")\n",
+    "# img = readh5(\"../../../datasets/cremi/sample_A_20160501.hdf\", \"volumes\")\n",
     "\n",
     "\n",
+    "img = readh5(\"../../../datasets/cremi_edited/labels/label_sample_A_20160501.h5\", \"labels\")\n",
+    "# img = readh5(\"../../../datasets/cremi_edited/labels/label_sample_B_20160501.h5\", \"labels\")\n",
     "\n",
+    "# img = readh5(\"../outputs/CREMI_Binary_UNet/test/result_0_txy.h5\", \"vol0\")\n",
     "\n",
     "# img = readh5(\"../../../datasets/cremi/sample_A_padded_20160501.hdf\")\n",
     "\n",
@@ -93,14 +83,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['labels' 'raw']\n"
+      "[[[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  ...\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]\n",
+      "  [0 0 0 ... 0 0 0]]]\n"
      ]
     }
    ],
@@ -110,10 +148,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "uid = np.unique(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "884"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(uid)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-13 17:11:13.855146: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-06-13 17:11:15.936573: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-06-13 17:11:19.201122: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-06-13 17:11:19.202034: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-06-13 17:11:35.497971: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext tensorboard\n",
+    "import tensorflow as tf\n",
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-3b427e865dd2de83\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-3b427e865dd2de83\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir /home/suryakalia/documents/summer/exploration/pytorch_connectomics/outputs/CREMI_Binary_UNet/"
+   ]
   },
   {
    "cell_type": "code",
